package menuprincipal.battleship.bateau;

import javafx.util.Pair;
public class Bateau {
    private int pointDeVie;
    private Pair<Integer, String> pair = new Pair<>(1, "One");

    public void estTouche () {

    }
}
