package menuprincipal.battleship.plateau;

import javafx.util.Pair;

public class PlateauBateau extends Plateau {
    @Override
    public void ajouterTir(Pair<Double, Double> coordonee) {
        super.ajouterTir(coordonee);
    }

    public void placerBateau() {

    }

}
