package menuprincipal.battleship.plateau;

import javafx.util.Pair;

public class PlateauTir {
    private void verifierTir(Pair<Double,Double> coordonoee) {

    }
}
