package menuprincipal.frontend;

import menuprincipal.battleship.plateau.PlateauBateau;
import menuprincipal.battleship.plateau.PlateauTir;

public class AfficheurPartie {
    static void afficherPartie (PlateauBateau pb, PlateauTir plateauTir) {

    }
}
